function(add_example name)
    add_executable(${name})
    target_sources(${name} PRIVATE ${name}.cpp)
    target_link_libraries(${name} av_connect)
endfunction()

add_example(http_srv)
add_example(http_srv_echo)
add_example(ws_srv)
if(MSVC)
    target_compile_options(ws_srv PRIVATE /bigobj)
endif()
add_example(advance)
if(MSVC)
    target_compile_options(advance PRIVATE /bigobj)
endif()
add_example(ws_client)
if(MSVC)
    target_compile_options(ws_client PRIVATE /bigobj)
endif()

